--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -41,7 +41,7 @@ html, body {
     width: 100%;
 }
 .tableCell {
-    display: table-cell;
+    /*display: table-cell;*/
     vertical-align: middle;
     width: 100%;
     height: 100%;
