--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -5,28 +5,36 @@
  *
  * Copyright (C) 2013 alvarotrigo.com - A project by Alvaro Trigo
  */
-html, body {
+
+html,
+body {
     margin: 0;
     padding: 0;
 }
+
 #superContainer {
     height: 100%;
     position: relative;
 }
+
 .section {
     position: relative;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
+
 .slide {
     float: left;
 }
-.slide, .slidesContainer {
+
+.slide,
+.slidesContainer {
     height: 100%;
     display: block;
 }
+
 .slides {
     height: 80%;
     overflow: hidden;
@@ -36,20 +44,29 @@ html, body {
     -o-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
-.section.table, .slide.table {
+
+.section.table {
     display: table;
     width: 100%;
 }
+
+.slide.table {
+    display: table;
+    width: 100%;
+}
+
 .tableCell {
     /*display: table-cell;*/
     vertical-align: middle;
     width: 100%;
     height: 100%;
 }
+
 .slidesContainer {
     float: left;
     position: relative;
 }
+
 .controlArrow {
     position: absolute;
     top: 50%;
@@ -59,26 +76,31 @@ html, body {
     border-style: solid;
     margin-top: -38px;
 }
+
 .controlArrow.prev {
     left: 15px;
     width: 0;
     border-width: 38.5px 34px 38.5px 0;
     border-color: transparent #fff transparent transparent;
 }
+
 .controlArrow.next {
     right: 15px;
     border-width: 38.5px 0 38.5px 34px;
     border-color: transparent transparent transparent #fff;
 }
+
 .scrollable {
     overflow: scroll;
 }
+
 .easing {
     -webkit-transition: all 0.7s ease-out;
     -moz-transition: all 0.7s ease-out;
     -o-transition: all 0.7s ease-out;
     transition: all 0.7s ease-out;
 }
+
 #fullPage-nav {
     position: fixed;
     z-index: 100;
@@ -86,40 +108,49 @@ html, body {
     top: 50%;
     opacity: 1;
 }
+
 #fullPage-nav.right {
     right: 17px;
 }
+
 #fullPage-nav.left {
     left: 17px;
 }
+
 .fullPage-slidesNav {
     position: absolute;
     z-index: 4;
     left: 50%;
     opacity: 1;
 }
+
 .fullPage-slidesNav.bottom {
     bottom: 17px;
 }
+
 .fullPage-slidesNav.top {
     top: 17px;
 }
+
 #fullPage-nav ul,
 .fullPage-slidesNav ul {
     margin: 0;
     padding: 0;
 }
+
 #fullPage-nav li,
 .fullPage-slidesNav li {
     display: block;
     width: 14px;
     height: 13px;
     margin: 7px;
-    position:relative;
+    position: relative;
 }
+
 .fullPage-slidesNav li {
     display: inline-block;
 }
+
 #fullPage-nav li a,
 .fullPage-slidesNav li a {
     display: block;
@@ -130,10 +161,12 @@ html, body {
     cursor: pointer;
     text-decoration: none;
 }
+
 #fullPage-nav li .active span,
 .fullPage-slidesNav .active span {
     background: #333;
 }
+
 #fullPage-nav span,
 .fullPage-slidesNav span {
     top: 2px;
@@ -148,6 +181,7 @@ html, body {
     position: absolute;
     z-index: 1;
 }
+
 .fullPage-tooltip {
     position: absolute;
     color: #fff;
@@ -155,9 +189,11 @@ html, body {
     font-family: arial, helvetica, sans-serif;
     top: -2px;
 }
+
 .fullPage-tooltip.right {
     right: 20px;
 }
+
 .fullPage-tooltip.left {
     left: 20px;
 }
